Refactored entire project: - Cache Tiltify OAuth tokens instead of requesting a new token for every API request. - Replace generated configuration with a bundled `config.yml`.   - Move reward pools (Stones, Held Items, Poké Balls, Legendaries) into the config.   - Split config into dedicated sections.   - Add configurable BossBar styles. - Improve configuration loading and reload behavior. - Disable Nether and End access using mixins, allowing runtime toggling without restarting the server. - Added permissions and help menu - Rework commands under the `/pixelball` root command.   - Add `/pixelball debug` for legendary spawn debugging.   - Add `/pixelball bypass` for per-player dimension bypasses. - Fix donation override calculations. - General code cleanup, refactoring, and project organization improvements.